--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>junit4-runner-parent</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <groupId>com.iodesystems</groupId>
   <packaging>pom</packaging>
   <modules>
@@ -47,7 +47,7 @@
   </build>
   <scm>
     <developerConnection>scm:git:git@github.com:Nthalk/junit4-runner.git</developerConnection>
-    <tag>junit4-runner-parent-1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
