Rename artifacts from xsd and runner to junit4-xsd and junit4-runner

--- a/junit4-runner/pom.xml
+++ b/junit4-runner/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>runner</artifactId>
+  <artifactId>junit4-runner</artifactId>
   <properties>
     <kotlin.version>1.8.21</kotlin.version>
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
@@ -47,7 +47,7 @@
     </dependency>
     <dependency>
       <groupId>com.iodesystems</groupId>
-      <artifactId>xsd</artifactId>
+      <artifactId>junit4-xsd</artifactId>
       <version>${project.version}</version>
       <exclusions>
         <exclusion>
