--- a/junit4-xsd/pom.xml
+++ b/junit4-xsd/pom.xml
@@ -1,61 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.iodesystems</groupId>
-        <artifactId>junit4-runner-parent</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>com.iodesystems</groupId>
+    <artifactId>junit4-runner-parent</artifactId>
+    <version>1.0.2-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>junit4-xsd</artifactId>
+  <artifactId>junit4-xsd</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
-                </configuration>
-            </plugin>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.5.0</version>
-                <configuration>
-                    <sources>
-                        <source>src/main/java/com/iodesystems/junit4/xsd</source>
-                    </sources>
-                    <generateEpisode>false</generateEpisode>
-                    <outputDirectory>src/main/resources</outputDirectory>
-                    <clearOutputDir>false</clearOutputDir>
-                    <transformSchemas>
-                        <transformSchema>
-                            <uri>junit</uri>
-                            <toPrefix>junit4</toPrefix>
-                            <toFile>junit4.xsd</toFile>
-                        </transformSchema>
-                    </transformSchemas>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>4.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jaxb2-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <sources>
+            <source>src/main/java/com/iodesystems/junit4/xsd</source>
+          </sources>
+          <generateEpisode>false</generateEpisode>
+          <outputDirectory>src/main/resources</outputDirectory>
+          <clearOutputDir>true</clearOutputDir>
+          <transformSchemas>
+            <transformSchema>
+              <uri>junit</uri>
+              <toPrefix>junit4</toPrefix>
+              <toFile>junit4.xsd</toFile>
+            </transformSchema>
+          </transformSchemas>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.5.0</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
 </project>
