--- a/junit4-xsd/pom.xml
+++ b/junit4-xsd/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.iodesystems</groupId>
     <artifactId>junit4-runner-parent</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>junit4-xsd</artifactId>
