--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>junit4-runner-parent</artifactId>
-  <version>1.0.4-SNAPSHOT</version>
+  <version>1.0.4</version>
   <groupId>com.iodesystems</groupId>
   <packaging>pom</packaging>
   <name>JUnit4Runner</name>
@@ -80,7 +80,7 @@
     <connection>scm:git:git@github.com:Nthalk/junit4-runner.git</connection>
     <developerConnection>scm:git:git@github.com:Nthalk/junit4-runner.git</developerConnection>
     <url>https://github.com/Nthalk/junit4-runner</url>
-    <tag>HEAD</tag>
+    <tag>junit4-runner-parent-1.0.4</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
